# rev-toolkit

./: .gitignore  Cargo.toml  Makefile.toml  README.md  inject-dll.ps1  rust-toolchain.toml
ac-external/: Cargo.toml  README.md
ac-external/src/: main.rs
crates/toolkit/: Cargo.toml
crates/toolkit/src/: process.rs
examples/ac-external/: Cargo.toml  README.md  main.rs  offsets.rs  structs.rs
examples/ac-external/src/: offsets.rs
examples/cod4-internal/: README.md  main.rs  offsets.rs  structs.rs
examples/rf-internal/: README.md  main.rs  structs.rs
examples/wesnoth-external/: Cargo.toml  README.md  main.rs
examples/wesnoth-internal/: Cargo.toml  README.md  main.rs
examples/wesnoth-internal/src/: lib.rs
extra/proxy-dll/: Cargo.toml  README.md  build.rs  forward.def
extra/proxy-dll/src/: forward.rs  lib.rs
scripts/: exports.ps1  inject-dll.ps1
src/: hooks.rs  inject.rs  lib.rs  memory.rs  pattern.rs  process.rs  status.rs  utils.rs
toolkit/src/: lib.rs  memory.rs  utils.rs
wesnoth-external/: Cargo.toml
wesnoth-external/src/: main.rs
wesnoth-internal/: Cargo.toml
wesnoth-internal/src/: lib.rs
