[package]
name = "wesnoth-internal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type=["cdylib"]

[dependencies]
# rev-toolkit = { path = "../../crates/toolkit" }

[dependencies.windows]
version = "0.48.0"
features = [
    "Win32_Foundation",
    "Win32_System_SystemServices",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_Console",
    "Win32_System_LibraryLoader",
    "Win32_UI_Input_KeyboardAndMouse"
]
